--- a/streak-frontend/register.html
+++ b/streak-frontend/register.html
@@ -177,7 +177,7 @@
   <body>
     <main class="auth-card">
       <h1 class="brand">Create Account</h1>
-      <p class="subtitle">Register with your Gmail. OTP verify ke baad hi login hoga.</p>
+      <p class="subtitle">Register with your Gmail. OTP flow depends on server settings.</p>
       <span class="pill">Gmail Only</span>
 
       <form id="registerForm" novalidate>
@@ -302,7 +302,7 @@
         }
 
         try {
-          setStatus("Creating account and sending OTP...");
+          setStatus("Creating account...");
 
           const response = await fetch(REGISTER_API, {
             method: "POST",
@@ -315,14 +315,24 @@
             throw new Error(data.error || data.message || "Registration failed");
           }
 
-          setStatus(
-            "Registration successful. OTP sent to your Gmail. Verify OTP first.",
-            "success"
-          );
-
-          setTimeout(() => {
-            window.location.href = `./verify-otp.html?email=${encodeURIComponent(email)}`;
-          }, 2200);
+          const requiresOtp = data.requiresOtp !== false;
+          if (requiresOtp) {
+            setStatus(
+              "Registration successful. OTP sent to your Gmail. Verify OTP first.",
+              "success"
+            );
+            setTimeout(() => {
+              window.location.href = `./verify-otp.html?email=${encodeURIComponent(email)}`;
+            }, 2200);
+          } else {
+            setStatus(
+              "Registration successful. OTP is currently disabled. Please login.",
+              "success"
+            );
+            setTimeout(() => {
+              window.location.href = `./login.html`;
+            }, 1600);
+          }
         } catch (error) {
           setStatus(error.message || "Registration failed", "error");
         }
