Switch forgot-password flow to OTP and update reset UI

--- a/streak-frontend/forgot-password.html
+++ b/streak-frontend/forgot-password.html
@@ -164,7 +164,7 @@
   <body>
     <main class="card">
       <h1>Forgot Password</h1>
-      <p class="subtitle">Apna Gmail enter karo. Reset link mail par aayega.</p>
+      <p class="subtitle">Apna Gmail enter karo. Password reset OTP mail par aayega.</p>
 
       <form id="forgotForm" novalidate>
         <label class="label" for="email">Gmail</label>
@@ -177,7 +177,7 @@
           placeholder="you@gmail.com"
         />
 
-        <button class="btn" type="submit">Send Reset Link</button>
+        <button class="btn" type="submit">Send OTP</button>
         <p id="status" class="status" aria-live="polite"></p>
       </form>
 
@@ -241,7 +241,7 @@
         }
 
         try {
-          setStatus("Sending reset link...");
+          setStatus("Sending OTP...");
 
           const response = await fetch(FORGOT_API, {
             method: "POST",
@@ -255,11 +255,14 @@
           }
 
           setStatus(
-            data.message || "If account exists, password reset instructions were sent.",
+            data.message || "If account exists, password reset OTP has been sent.",
             "success"
           );
+          setTimeout(() => {
+            window.location.href = `./reset-password.html?email=${encodeURIComponent(email)}`;
+          }, 1500);
         } catch (error) {
-          setStatus(error.message || "Could not send reset link", "error");
+          setStatus(error.message || "Could not send OTP", "error");
         }
       });
     </script>
