--- a/streak-frontend/reset-password.html
+++ b/streak-frontend/reset-password.html
@@ -130,6 +130,7 @@
 
       .status.error { color: var(--danger); }
       .status.success { color: #0b6f5c; }
+      .hidden { display: none; }
 
       .link-row {
         margin-top: 0.9rem;
@@ -165,9 +166,32 @@
   <body>
     <main class="card">
       <h1>Reset Password</h1>
-      <p class="subtitle">Naya password set karo aur phir login karo.</p>
+      <p id="resetSubtitle" class="subtitle">Gmail + OTP enter karke naya password set karo.</p>
 
       <form id="resetForm" novalidate>
+        <div id="otpFields">
+          <label class="label" for="email">Gmail</label>
+          <input
+            id="email"
+            class="input"
+            type="email"
+            required
+            autocomplete="email"
+            placeholder="you@gmail.com"
+          />
+
+          <label class="label" for="otp">OTP</label>
+          <input
+            id="otp"
+            class="input"
+            type="text"
+            inputmode="numeric"
+            maxlength="6"
+            placeholder="6-digit OTP"
+            required
+          />
+        </div>
+
         <label class="label" for="password">New Password</label>
         <input
           id="password"
@@ -225,8 +249,12 @@
       const RESET_API = `${API_ORIGIN}/api/auth/reset-password`;
 
       const resetForm = document.getElementById("resetForm");
+      const otpFields = document.getElementById("otpFields");
+      const emailInput = document.getElementById("email");
+      const otpInput = document.getElementById("otp");
       const passwordInput = document.getElementById("password");
       const confirmPasswordInput = document.getElementById("confirmPassword");
+      const resetSubtitle = document.getElementById("resetSubtitle");
       const status = document.getElementById("status");
 
       function setStatus(message, type = "") {
@@ -239,17 +267,23 @@
         return (params.get("token") || "").trim();
       }
 
+      function getEmailFromUrl() {
+        const params = new URLSearchParams(window.location.search);
+        return (params.get("email") || "").trim();
+      }
+
+      function isGmail(email) {
+        return /^[^\s@]+@gmail\.com$/i.test(email);
+      }
+
       resetForm.addEventListener("submit", async (event) => {
         event.preventDefault();
 
         const token = getTokenFromUrl();
+        const email = emailInput.value.trim().toLowerCase();
+        const otp = otpInput.value.trim();
         const password = passwordInput.value;
         const confirmPassword = confirmPasswordInput.value;
-
-        if (!token) {
-          setStatus("Invalid reset link. Token missing.", "error");
-          return;
-        }
 
         if (!password || !confirmPassword) {
           setStatus("All fields are required.", "error");
@@ -266,13 +300,29 @@
           return;
         }
 
+        const payload = { password };
+        if (token) {
+          payload.token = token;
+        } else {
+          if (!isGmail(email)) {
+            setStatus("Please enter valid Gmail.", "error");
+            return;
+          }
+          if (!/^\d{6}$/.test(otp)) {
+            setStatus("Enter valid 6-digit OTP.", "error");
+            return;
+          }
+          payload.email = email;
+          payload.otp = otp;
+        }
+
         try {
           setStatus("Updating password...");
 
           const response = await fetch(RESET_API, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ token, password }),
+            body: JSON.stringify(payload),
           });
 
           const data = await response.json();
@@ -292,6 +342,24 @@
           setStatus(error.message || "Password reset failed", "error");
         }
       });
+
+      (function boot() {
+        const token = getTokenFromUrl();
+        const urlEmail = getEmailFromUrl();
+
+        if (urlEmail) {
+          emailInput.value = urlEmail.toLowerCase();
+        }
+
+        if (token) {
+          otpFields.classList.add("hidden");
+          resetSubtitle.textContent = "Reset link verified. Naya password set karo.";
+          return;
+        }
+
+        otpFields.classList.remove("hidden");
+        resetSubtitle.textContent = "Gmail + OTP enter karke naya password set karo.";
+      })();
     </script>
     <script src="./pwa.js"></script>
   </body>
